--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -13,6 +13,8 @@
     <title>Chuni Radar</title>
   </head>
   <body>
-    <%- include('../partials/header.ejs') %> <%- body %>
+    <%- include('../partials/header.ejs') %>
+    <div class="date-updated">updated: 25/08/24</div>
+    <%- body %>
   </body>
 </html>
