--- a/views/song.ejs
+++ b/views/song.ejs
@@ -1,6 +1,6 @@
 <div class="layout-container">
     <div class="songpage-container">
-        <div class="grid-container">
+        <div class="grid-container width-100">
             <div class="song-header">
             <% if (result.length > 0) { %>
             <div class="song-text">
@@ -22,7 +22,7 @@
             <button id="expertBtn" class="btn-expert">Expert</button>
             <button id="masterBtn" class="btn-master active-btn active-master">Master</button>
             <% result.forEach(item => { %>
-                <% if (item.difficulty === "ultima") {%>
+                <% if (item.difficulty == 'ultima') {%>
                     <button id="ultimaBtn" class="btn-ultima">Ultima</button>
                 <% } %>
             <% }); %>
@@ -56,10 +56,22 @@
                 <% if (item.difficulty) { %>
                     <% if (item.difficulty == 'master') {%>
                     <div class="diff-level master">Master <%= item.lev_mas %></div>
+                        <a class="chart-link" href='https://www.youtube.com/results?search_query=<%=item.title%>+<%=item.difficulty%>+Chunithm' target="_blank">
+                            <img class="video-icon" src="/tv-white.png" >
+                            <span>chart video</span>
+                        </a>
                     <% } else if (item.difficulty == 'expert') { %>
                     <div class="diff-level expert">Expert <%= item.lev_exp %></div>
+                        <a class="chart-link" href='https://www.youtube.com/results?search_query=<%=item.title%>+<%=item.difficulty%>+Chunithm' target="_blank">
+                            <img class="video-icon" src="/tv-white.png" >
+                            <span>chart video</span>
+                        </a>
                 <% } else { %>
                     <div class="diff-level ultima">Ultima <%= item.lev_ult %></div>
+                        <a class="chart-link" href='https://www.youtube.com/results?search_query=<%=item.title%>+<%=item.difficulty%>+Chunithm' target="_blank">
+                            <img class="video-icon" src="/tv-white.png" >
+                            <span>chart video</span>
+                        </a>
                     <% } %>
             <% } %>
             </div>
@@ -89,6 +101,12 @@
                 </div>
             </div>
             <div class="item-details-col">
+                <% if (result.length > 0) { %>
+                <a class="chart-link" href='https://www.youtube.com/results?search_query=<%=result[0].title%>+Chunithm' target="_blank">
+                    <img class="video-icon" src="/tv-white.png" >
+                    <span>chart video</span>
+                </a>
+                <% } %>
             </div>
         </div>
         </div>
