--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,7 +53,7 @@
       />
       <div class="radar-container">
         <canvas
-          class="radar-chart"
+          class="radar-chart pulse"
           height="200"
           width="200"
           data-pianoValue="<%=item.piano%>"
