--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -20,7 +20,6 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 1rem;
 }
 
 h6 {
@@ -446,8 +445,9 @@ h6 {
 .offscreen {
   position: absolute;
   translate: -100%;
-  background-color: hsla(0, 0%, 0%, 0.6);
-  border-radius: 10px;
+  background-color: white;
+  min-height: 100vh;
+  z-index: 10000;
 }
 
 .logout-link {
@@ -459,12 +459,12 @@ h6 {
 }
 
 .admin-login-title {
-  color: white;
+  color: black;
 }
 
 #openLoginForm {
   position: absolute;
-  top: 25px;
+  top: 10px;
   left: 5px;
   border: none;
   background: none;
@@ -475,6 +475,57 @@ h6 {
   margin: 0 5px;
 }
 
+.menu {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  margin: 0.5rem;
+}
+
+.menu-item {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: black;
+  padding: 5px 0;
+}
+
+.menu-item:hover {
+  background-color: hsla(0, 0%, 0%, 0.1);
+}
+
+.menu-icon {
+  margin-right: 15px;
+  width: 30px;
+  height: auto;
+}
+
+#closeMenu {
+  display: flex;
+  justify-content: flex-start;
+  border: none;
+  background: none;
+  cursor: pointer;
+  padding: 0;
+}
+
+.no-scroll {
+  overflow-y: hidden;
+  padding-right: 15px;
+}
+
+.blur {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+  opacity: 0.5;
+  z-index: 19;
+  transition: opacity 200ms ease-in-out;
+}
+
 @media (max-width: 500px) {
   .grid-container {
     grid-template-columns: auto;
@@ -483,5 +534,9 @@ h6 {
 
   .song-header {
     margin: 0;
+  }
+
+  .offscreen {
+    width: 100%;
   }
 }
