--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -447,6 +447,7 @@ h6 {
   translate: -100%;
   background-color: white;
   min-height: 100vh;
+  min-width: 210px;
   z-index: 10000;
 }
 
@@ -521,9 +522,9 @@ h6 {
   width: 100vw;
   height: 100vh;
   background-color: black;
-  opacity: 0.5;
+  opacity: 0.4;
   z-index: 19;
-  transition: opacity 200ms ease-in-out;
+  /* transition: opacity 200ms ease-in-out; */
 }
 
 @media (max-width: 500px) {
