--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -89,11 +89,12 @@ h6 {
 .header-title {
   font-size: 2.5rem;
   text-decoration: none;
-  color: black;
+  color: hsl(0, 0%, 0%);
+  transition: scale font-size 200ms ease-in-out;
 }
 
 .header-title:hover {
-  color: white;
+  scale: 1.05;
 }
 
 .pulse {
@@ -178,7 +179,7 @@ h6 {
 }
 
 .song-title:hover {
-  color: beige;
+  text-decoration: underline;
 }
 
 .song-title,
@@ -272,7 +273,7 @@ h6 {
 }
 
 .video-icon {
-  width: 50px;
+  width: 20px;
   height: auto;
 }
 
@@ -468,8 +469,13 @@ h6 {
   top: 10px;
   left: 5px;
   border: none;
+  border-radius: 5px;
   background: none;
   cursor: pointer;
+}
+
+#openLoginForm:hover {
+  background-color: hsla(0, 0%, 0%, 0.2);
 }
 
 .randomChart {
@@ -510,11 +516,6 @@ h6 {
   padding: 0;
 }
 
-.no-scroll {
-  overflow-y: hidden;
-  padding-right: 15px;
-}
-
 .blur {
   position: fixed;
   top: 0;
@@ -525,6 +526,15 @@ h6 {
   opacity: 0.4;
   z-index: 19;
   /* transition: opacity 200ms ease-in-out; */
+}
+
+.video-link {
+  font-size: 1.25rem;
+  font-weight: normal;
+}
+
+.video-link:hover {
+  text-decoration: underline;
 }
 
 @media (max-width: 500px) {
@@ -539,5 +549,11 @@ h6 {
 
   .offscreen {
     width: 100%;
+  }
+}
+
+@media (max-width: 374px) {
+  .header-title {
+    font-size: 2rem;
   }
 }
