--- a/views/song.ejs
+++ b/views/song.ejs
@@ -57,20 +57,20 @@
                     <% if (item.difficulty == 'master') {%>
                     <div class="diff-level master">Master <%= item.lev_mas %></div>
                         <a class="chart-link" href='https://www.youtube.com/results?search_query="<%=item.title%>"+<%=item.difficulty%>+Chunithm' target="_blank">
-                            <img class="video-icon" src="/tv-white.png" >
-                            <span>chart video</span>
+                            <span class="video-link">chart video</span>
+                            <img class="video-icon" src="/newtab.svg" >
                         </a>
                     <% } else if (item.difficulty == 'expert') { %>
                     <div class="diff-level expert">Expert <%= item.lev_exp %></div>
                         <a class="chart-link" href='https://www.youtube.com/results?search_query="<%=item.title%>"+<%=item.difficulty%>+Chunithm' target="_blank">
-                            <img class="video-icon" src="/tv-white.png" >
-                            <span>chart video</span>
+                            <span class="video-link">chart video</span>
+                            <img class="video-icon" src="/newtab.svg" >
                         </a>
                 <% } else { %>
                     <div class="diff-level ultima">Ultima <%= item.lev_ult %></div>
                         <a class="chart-link" href='https://www.youtube.com/results?search_query="<%=item.title%>"+<%=item.difficulty%>+Chunithm' target="_blank">
-                            <img class="video-icon" src="/tv-white.png" >
-                            <span>chart video</span>
+                            <span class="video-link">chart video</span>
+                            <img class="video-icon" src="/newtab.svg" >
                         </a>
                     <% } %>
             <% } %>
@@ -103,8 +103,8 @@
             <div class="item-details-col">
                 <% if (result.length > 0) { %>
                 <a class="chart-link" href='https://www.youtube.com/results?search_query="<%=result[0].title%>"+Chunithm' target="_blank">
-                    <img class="video-icon" src="/tv-white.png" >
-                    <span>chart video</span>
+                    <span class="video-link">chart video</span>
+                    <img class="video-icon" src="/newtab.svg" >
                 </a>
                 <% } %>
             </div>
