--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -537,6 +537,27 @@ h6 {
   text-decoration: underline;
 }
 
+#login-message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loading-spinner {
+  display: none;
+  animation: spinning 1s linear infinite;
+}
+
+@keyframes spinning {
+  0% {
+    rotate: 0deg;
+  }
+
+  100% {
+    rotate: 360deg;
+  }
+}
+
 @media (max-width: 500px) {
   .grid-container {
     grid-template-columns: auto;
