--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -26,6 +26,30 @@
           <img class="menu-icon" src="/dice.svg" alt="" />
           <span class="menu-title">Random Chart</span>
         </a>
+        <a href="/top/tricky" class="menu-item">
+          <img class="menu-icon" src="/question.svg" alt="" />
+          <span class="menu-title">Tricky</span>
+        </a>
+        <a href="/top/piano" class="menu-item">
+          <img class="menu-icon" src="/question.svg" alt="" />
+          <span class="menu-title">Piano</span>
+        </a>
+        <a href="/top/stamina" class="menu-item">
+          <img class="menu-icon" src="/question.svg" alt="" />
+          <span class="menu-title">Stamina</span>
+        </a>
+        <a href="/top/slide" class="menu-item">
+          <img class="menu-icon" src="/question.svg" alt="" />
+          <span class="menu-title">Slide</span>
+        </a>
+        <a href="/top/air" class="menu-item">
+          <img class="menu-icon" src="/question.svg" alt="" />
+          <span class="menu-title">Air</span>
+        </a>
+        <a href="/top/crosshand" class="menu-item">
+          <img class="menu-icon" src="/question.svg" alt="" />
+          <span class="menu-title">Cross Hand</span>
+        </a>
         <a href="" class="menu-item">
           <img class="menu-icon" src="/info.svg" alt="" />
           <span class="menu-title">About</span>
